src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  input:-webkit-autofill,
  input:-webkit-autofill:hover,
  input:-webkit-autofill:focus,
  input:-webkit-autofill:active {
    @apply text-gray-100 shadow-[inset_0_0_0_30px] shadow-gray-600;
    -webkit-text-fill-color: #f3f4f6 !important;
  }

  html,
  body {
    @apply h-screen w-screen overflow-x-hidden scroll-smooth bg-white text-black dark:bg-black dark:text-white;
  }

  #root {
    @apply h-full w-full;
  }

  ::-moz-selection {
    /* Code for Firefox */
    @apply bg-blue-500 text-gray-700;
  }

  ::selection {
    @apply bg-blue-500 text-gray-700;
  }
}

